# lotos

./: LOTOS.hs  README.mdwn  lotos-eater.hs  lotos.cabal
LOTOS/: AST.hs  Controllable.hs  Parser.hs  Simplify.hs  Specialize.hs  Synthesize.hs  Trace.hs  TypeCheck.hs  Util.hs
LOTOS/AST/: Util.hs
LOTOS/Synthesize/: AST.hs
samples/: full_dev.lotos  full_os.lotos  recv_dev.lotos  recv_os.lotos  send_dev.lotos  send_os.lotos
