name:                lotos
version:             0.1.0.0
synopsis:            Tools for the LOTOS process calculus
-- description:         
homepage:            https://github.com/jameysharp/lotos
license:             GPL-2
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@minilop.net
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     LOTOS,
                       LOTOS.AST,
                       LOTOS.Controllable,
                       LOTOS.Parser,
                       LOTOS.Simplify,
                       LOTOS.Trace
  -- other-modules:       
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base ==4.6.*,
                       containers ==0.5.*,
                       parsec ==3.1.*,
                       RepLib ==0.5.*,
                       transformers ==0.3.*,
                       unbound ==0.4.*
